@@ -48,6 +48,7 @@ Fixed TBBlue bugs:
 -Fixed detecting unified/composite sprites
 -Fixed calculating pattern on 4 bpp sprites
 -Fixed 4bpp sprites transparency
+-Fixed anchor on 4-byte sprites
 
 
 Fixed loading General Sound rom
